# cron-job

./: .env  .gitignore  README.md  cron_manager.py  database.py  directions.txt  new_instructions.txt  pyproject.toml  test_click.py  test_cron_manager.py
