[tool.poetry]
name = "cron-job"
version = "0.1.0"
description = "A CLI application to manage cron jobs with database persistence"
authors = ["mahmud <mahmud@nybsys.com>"]
readme = "README.md"
packages = [{include = "cron_job"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.2.1"
python-crontab = "^3.3.0"
croniter = "^6.0.0"
sqlalchemy = "^2.0.43"
python-decouple = "^3.8"
pyodbc = "^5.2.0"
pytest = "^8.4.1"

[tool.poetry.scripts]
cron-manager = "cron_job.cron_manager:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
